@@ -125,11 +125,12 @@ extern "C" {
 #define ES_DISABLENOSCROLL	8192
 #define ES_EX_NOCALLOLEINIT 16777216
 #define ES_NOIME 524288
+#define ES_NOOLEDRAGDROP 8
 #define ES_SAVESEL	32768
+#define ES_SELECTIONBAR 16777216
 #define ES_SELFIME 262144
 #define ES_SUNKEN 16384
 #define ES_VERTICAL 4194304
-#define ES_SELECTIONBAR 16777216
 #define EM_CANPASTE	(WM_USER+50)
 #define EM_DISPLAYBAND	(WM_USER+51)
 #define EM_EXGETSEL	(WM_USER+52)
@@ -218,15 +219,20 @@ extern "C" {
 #define ENM_NONE 0
 #define ENM_CHANGE 1
 #define ENM_CORRECTTEXT 4194304
+#define ENM_DRAGDROPDONE	16
 #define ENM_DROPFILES 1048576
+#define ENM_IMECHANGE 8388608
 #define ENM_KEYEVENTS 65536
+#define ENM_LANGCHANGE 16777216
+#define ENM_LINK 67108864
 #define ENM_MOUSEEVENTS 131072
+#define ENM_OBJECTPOSITIONS 33554432
 #define ENM_PROTECTED 2097152
 #define ENM_REQUESTRESIZE 262144
 #define ENM_SCROLL 4
+#define ENM_SCROLLEVENTS 8
 #define ENM_SELCHANGE 524288
 #define ENM_UPDATE 2
-#define ENM_LINK 67108864
 #define ECO_AUTOWORDSELECTION	1
 #define ECO_AUTOVSCROLL	64
 #define ECO_AUTOHSCROLL	128
