@@ -1,3 +1,13 @@
+2003-10-11  Manu B  <manubee@users.sourceforge.net>
+
+	* include/afxres.h: New file.
+
+	* include/richedit.h (ES_NOOLEDRAGDROP, ENM_DRAGDROPDONE,
+	ENM_IMECHANGE, ENM_LANGCHANGE, ENM_OBJECTPOSITIONS,
+	ENM_SCROLLEVENTS): Add constants.
+
+	* include/richedit.h (ES_SELECTIONBAR, ENM_LINK): Sort constants.
+
 2003-10-09  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
 
 	* include/errorep.h: New file.
